Alteração de estrutura de pastas

--- a/about/index.html
+++ b/about/index.html
@@ -6,39 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glaicon Rosa - Portifolio</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./">home</a>
-            <a href="./about">Sobre mim</a>
+            <a href="../">home</a>
+            <a href="../about">Sobre mim</a>
         </nav>
     </header>
     <main>
         <section>
-            <h1>Eleve seu negócio a outro nível <strong class="title-featured">com uma interface fácil de usar e
-                    intuitiva!</strong></h1>
+            <h1>Sobre Mim</h1>
             <div>
                 <p>Olá! Sou <span>Glaicon Rosa</span>, desenvolvedor web Full-Stack com especialidade em <span>TOTVS
                         Fluig</span>.</p>
                 <p> Ajudo empresas a padronizar seu ambiente de comunicação interna, controlar seus processos e efetuar
                     a gestão dos documento, tudo isso de forma digital. Vamos conversar?</p>
             </div>
-            <div class="links">
-                <h2>Acesse minhas redes</h2>
-                <a href="https://www.linkedin.com/in/glaicon-rosa/" target="_blank">
-                    <img src="./assets/linkedin.png" alt="Logo linkedin">
-                    Linkedin
-                </a>
-                <a href="https://github.com/GlaiconCesar" target="_blank">
-                    <img src="./assets/github.png" alt="Logo github">
-                    Github
-                </a>
-            </div>
         </section>
-        <img src="./assets/fluig.png" alt="Foto Glaicon Rosa">
+        <img src="../assets/about.png" alt="Foto Glaicon Rosa">
     </main>
     <footer>
         <p>Desenvolvido por Glaicon Rosa</p>
